@@ -1,6 +1,7 @@
 0.17.2
 	new feature: configure default SNMP community (by jthurman)
 	update: show appropriate message, if a record cannot be found
+	update: add Cisco dictionary entry for WS-CBS3030-DEL. closes ticket 225 (by jthurman)
 	update: add OS, router, fibre switch dictionary entries for ticket 238 (by Aaron)
 	bugfix: do not produce PHP warning on LivePTR tab
 	bugfix: wrong port type set for WS-C2950-24. closes ticket 229 (by jthurman)
